[package]
name = "lua-macro-impl"
version = "0.1.0"
edition = "2021"
description = "Proc macro used by lua-macro"
repository = "https://github.com/ry00001/inline-lua"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.15"